fix: all relative links in pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: Software Engineer Interview Preparation Kit
+site_url: https://softwarebloat.github.io/software-engineer-interview-prep-kit/
+
 repo_url: https://github.com/softwarebloat/software-engineer-interview-prep-kit
 repo_name: softwarebloat/software-engineer-interview-prep-kit
 nav:
